--- a/main.tex
+++ b/main.tex
@@ -528,7 +528,7 @@ To adapt the log to our testbed, we perform the following steps:
     where $M=124\times24$ is the maximum number of node-hour available per day in our testbed.
 \end{enumerate}
 
-The resulting workload contains 23 users.
+The resulting workload contains 23 users \review{and 1,895 jobs}.
 The median number of node-hours submitted per day is 2,272, i.e., 76\%  of the maximum capacity of the testbed.
 The average number of node-hours submitted per day is 2,496, i.e., 84\% of the maximum capacity of the testbed.
 Some characteristics of this workload are provided in the form of graphs.
