--- a/main.tex
+++ b/main.tex
@@ -944,42 +944,48 @@ Remarkably, \textit{AlwaysGrow} and \textit{ParEfficiency} contain the two ``che
 \begin{table}
 \caption{Reconfigurations in the \textit{ParEfficiency} experiment (time in actual seconds). Gray rows represent shrinkages.}
 \label{tab:reconfig_pairs}
-\begin{tabular}{llll}
+\begin{tabular}{clll}
 \toprule
-& \textbf{Initial Nodes} & \textbf{Final Nodes} & \textbf{Time} \\
+\textbf{PhD Job Id}& \textbf{Initial Nodes} & \textbf{Final Nodes} & \textbf{Rec. Time} \\
 \midrule
- \multirow{3}{*}{\textbf{Job Id 247}} 
+ \multirow{1}{*}{\textbf{0}} 
+            & 16 & -- & -- \\
+\midrule
+ \multirow{3}{*}{\textbf{1}} 
             & 2 & 4 & 254 s. \\
             & 4 & 8 & 136 s.\\
             & 8 & 16 & 72 s.\\
 \midrule
- \multirow{4}{*}{\textbf{Job Id 522}} 
+ \multirow{4}{*}{\textbf{2}} 
             & 8 & 16 & 69 s.\\
             & 16 & 32 & 43 s.\\
             & \rowcolor{lightgray} 32 & 16 & 47 s.\\
             & 16 & 32 & 34 s.\\
 \midrule
- \multirow{4}{*}{\textbf{Job Id 758}} 
+ \multirow{1}{*}{\textbf{3}} 
+            & 8 & -- & -- \\
+\midrule
+ \multirow{4}{*}{\textbf{4}} 
             & 4 & 8 & 133 s.\\
             & 8 & 16 & 69 s.\\
             & 16 & 32 & 35 s.\\
             & \rowcolor{lightgray} 32 & 16 & 49 s.\\
 \midrule
- \multirow{1}{*}{\textbf{Job Id 853}} 
+ \multirow{1}{*}{\textbf{5}} 
             & 8 & 16 & 68 s.\\
 \midrule
-\multirow{1}{*}{\textbf{Job Id 1068}} 
-            & \rowcolor{lightgray} 32 & 16 & 47 s.\\
-\midrule
-\multirow{1}{*}{\textbf{Job Id 1242}} 
+\multirow{1}{*}{\textbf{6}} 
             & 8 & 16 & 66 s.\\
 \midrule
-\multirow{3}{*}{\textbf{Job Id 1406}} 
+\multirow{1}{*}{\textbf{7}} 
+            & \rowcolor{lightgray} 32 & 16 & 47 s.\\
+\midrule
+\multirow{3}{*}{\textbf{8}} 
                 & 2 & 4 & 253 s.\\
                 & 4 & 8 & 135 s.\\
                 & 8 & 16 & 67 s.\\
 \midrule
- \multirow{8}{*}{\textbf{Job Id 1463}} 
+ \multirow{8}{*}{\textbf{9}} 
             & 16 & 32 & 38 s.\\
             & \rowcolor{lightgray} 32 & 16 & 48 s.\\
             & 16 & 32 & 36 s.\\
