--- a/main.tex
+++ b/main.tex
@@ -891,7 +891,7 @@ However, reconfigurations come with a cost (see Figure~\ref{fig:mpdata-reconf}),
 
 \review{
 The total cost of reconfigurations in our case is given in Table~\ref{tab:reconfig}.
-And additional, Table~\ref{tab:reconfig_pairs} details the reconfigurations performed in the \textit{ParEfficiency} experiment.
+Additionally, Table~\ref{tab:reconfig_pairs} details the reconfigurations performed in the \textit{ParEfficiency} experiment.
 }
 
 \iffalse
